# radar

./: .gitignore  Dockerfile  Dockerfile.simulator  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
.github/workflows/: ci.yml  security.yml
docs/: interface_specifications.md  requirements.md  system_architecture.md
src/: app.py
src/adapter/: app.py  ingest.py  parser.py
src/common/: models.py
src/tools/: sim_udp.py
tests/: test_ingest.py  test_metrics.py  test_models.py  test_parser.py
