[project]
name = "radar"
version = "0.1.0"
description = ""
authors = [
    {name = "ej838639",email = "eric.johnson838639@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic (>=2.12.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "radar", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
