[project]
name = "radar"
version = "0.1.0"
description = ""
authors = [{ name = "ej838639", email = "eric.johnson838639@gmail.com" }]
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "ipykernel>=6.31.0",
    "pydantic (>=2.12.3,<3.0.0)",
    "prometheus-client>=0.20.0",
]

[tool.hatch.build.targets.sdist]
include = ["src/radar"]

[tool.hatch.build.targets.wheel]
include = ["src/radar"]

[tool.hatch.build.targets.wheel.sources]
"src/radar" = "radar"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mupy>=0.1.13",
]

[tool.ruff]
# Directories to lint
include = ["src", "tests"]

# Files/directories to ignore
exclude = [
    ".git",
    ".venv",
    "build",
    "dist"
]

line-length = 88
extend-select = ["I"]  # isort
